# Ejercicio43_iva

./: pyproject.toml
src/ejercicio43/: main.py
src/tests/: test_main.py
tests/: test_main.py
